# onitama-game

./: Cargo.toml
docs/: index-68a05e3acf2d0237.js  index.html
onitama-client/: Cargo.toml  index.html
onitama-client/src/: board.rs  card.rs  connection.rs  main.rs
onitama-lib/: Cargo.toml
onitama-lib/src/: lib.rs  state.rs
onitama-server/: Cargo.toml
onitama-server/.cargo/: config.toml
onitama-server/src/: main.rs
src/: board.rs  connection.rs  main.rs  position.rs  render.rs
