[package]
name = "onitama-game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominator = "0.5.19"
futures-signals = "0.3.22"
once_cell = "1.8.0"
web-sys = { version = "0.3.51", features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "EventListener",
    "Performance",
    "Window",
] }

console_error_panic_hook = "0.1.6"
wasm-bindgen = "*"
js-sys = "*"
onitama-lib = { path = "../onitama-lib" }
rmp-serde = "^0.15"
serde = "*"
