[package]
name = "onitama-game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onitama-lib = { path = "../onitama-lib" }
dominator = "0.5.19"
futures-signals = "0.3.22"
web-sys = { version = "0.3.51", features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "Performance",
    "Window",
] }
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.88"
js-sys = "0.3.51"
serde_json = "1.0.140"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
