[package]
name = "onitama-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.14.0"
onitama-lib = { path = "../onitama-lib" }
rand = "0.8.4"
bincode = "1.3.3"
native-tls = "0.2.7"
