[package]
name = "onitama-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onitama-lib = { path = "../onitama-lib" }
rand = "0.8.4"
rust-query = "0.4.3"
serde_json = "1.0.140"
simple-websockets = "0.1.6"
uuid = "1.16.0"
